MDL-81199 core_ltix: move return.php to core

--- a/mod/lti/lang/en/deprecated.txt
+++ b/mod/lti/lang/en/deprecated.txt
@@ -28,3 +28,7 @@ courseexternaltoolsnoviewpermissions,mod_lti
 courseexternaltooliconalt,mod_lti
 courseexternaltools,mod_lti
 courseexternaltoolsinfo,mod_lti
+return_to_course,mod_lti
+lti_launch_error,mod_lti
+lti_launch_error_tool_request,mod_lti
+lti_launch_error_unsigned_help,mod_lti
