MDL-79844 core_ltix: update refs in moved site admin files
This change gets the 'manage tools' site admin page and the pages
it links to (hidden legacy settings pages), working properly again.
This includes support for the following features:
- LTI 1.3 Dynamic registration
- LTI 2.0 registration
- Manual tool creation
- Tool card management

--- a/mod/lti/lang/en/deprecated.txt
+++ b/mod/lti/lang/en/deprecated.txt
@@ -32,3 +32,86 @@ return_to_course,mod_lti
 lti_launch_error,mod_lti
 lti_launch_error_tool_request,mod_lti
 lti_launch_error_unsigned_help,mod_lti
+addtype,mod_lti
+external_tool_types,mod_lti
+main_admin,mod_lti
+toolproxy_help,mod_lti
+accept,mod_lti
+update,mod_lti
+delete,mod_lti
+reject,mod_lti
+capabilities,mod_lti
+capabilitiesrequired,mod_lti
+capabilities_help,mod_lti
+services,mod_lti
+services_help,mod_lti
+tool_settings,mod_lti
+typename,mod_lti
+typename_help,mod_lti
+tooldescription,mod_lti
+tooldescription_help,mod_lti
+ltiversion,mod_lti
+ltiversion_help,mod_lti
+oauthsecurity,mod_lti
+jwtsecurity,mod_lti
+resourcekey_admin,mod_lti
+resourcekey_admin_help,mod_lti
+password_admin,mod_lti
+password_admin_help,mod_lti
+clientidadmin,mod_lti
+clientidadmin_help,mod_lti
+keytype,mod_lti
+keytype_help,mod_lti
+keytype_keyset,mod_lti
+keytype_rsa,mod_lti
+publickey,mod_lti
+publickeyset,mod_lti
+publickeyset_help,mod_lti
+publickey_help,mod_lti
+initiatelogin,mod_lti
+initiatelogin_help,mod_lti
+redirectionuris,mod_lti
+redirectionuris_help,mod_lti
+parameter,mod_lti
+parameter_help,mod_lti
+show_in_course_activity_chooser,mod_lti
+show_in_course_lti1,mod_lti
+show_in_course_lti1_help,mod_lti
+show_in_course_lti2,mod_lti
+show_in_course_lti2_help,mod_lti
+show_in_course_no,mod_lti
+show_in_course_preconfigured,mod_lti
+default_launch_container,mod_lti
+default_launch_container_help,mod_lti
+contentitem_deeplinking,mod_lti
+contentitem_deeplinking_help,mod_lti
+toolurl_contentitemselectionrequest,mod_lti
+toolurl_contentitemselectionrequest_help,mod_lti
+restricttocategory,mod_lti
+restricttocategory_help,mod_lti
+always,mod_lti
+never,mod_lti
+share_name_admin,mod_lti
+share_name_admin_help,mod_lti
+share_email_admin,mod_lti
+share_email_admin_help,mod_lti
+delegate_tool,mod_lti
+accept_grades_admin,mod_lti
+accept_grades_admin_help,mod_lti
+force_ssl,mod_lti
+force_ssl_help,mod_lti
+miscellaneous,mod_lti
+siteid,mod_lti
+sitehost,mod_lti
+organizationid_default,mod_lti
+organizationid_default_help,mod_lti
+organizationidguid,mod_lti
+organizationidguid_help,mod_lti
+organizationurl,mod_lti
+organizationurl_help,mod_lti
+organizationdescr,mod_lti
+delegate,mod_lti
+failedtocreatetooltype,mod_lti
+click_to_continue,mod_lti
+lti_tool_request_added,mod_lti
+lti_tool_request_existing,mod_lti
